<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_fav_film.DetailFavFilmActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        android:stateListAnimator="@animator/show_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorSurface"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="true"
            app:title="Movie Jetpack"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:toolbarId="@id/toolbar">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:contentDescription="@string/todo"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkbg"
        android:clipToPadding="false"
        android:paddingBottom="72dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/_18"
                    app:layout_constraintStart_toEndOf="@+id/txt_language"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title" />

                <TextView
                    android:id="@+id/txt_language"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/en"
                    app:layout_constraintStart_toEndOf="@+id/txt_rate"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title" />

                <TextView
                    android:id="@+id/txt_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/action"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toStartOf="@+id/txt_date"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/cardView3"
                    app:layout_constraintTop_toBottomOf="@+id/txt_rate" />


                <TextView
                    android:id="@+id/txt_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/_4_5"
                    app:drawableLeftCompat="@drawable/ic_baseline_star_24"
                    app:layout_constraintStart_toEndOf="@+id/cardView3"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title" />


                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/cardView3"
                    app:layout_constraintTop_toTopOf="@+id/cardView3" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"

                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/cardView3"
                    app:layout_constraintTop_toBottomOf="@+id/txt_genres">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_margin="4dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY" />

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_poster"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@color/design_default_color_error"
                        android:contentDescription="@string/todo" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_genres"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txt_genres" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/visit"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toEndOf="@+id/cardView3"
                    app:layout_constraintTop_toBottomOf="@+id/cardView6" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/pink"
                    app:icon="@drawable/avd_add_to_delete"
                    app:iconGravity="textStart"
                    android:id="@+id/button_add"
                    app:iconPadding="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/button"
                    app:layout_constraintTop_toTopOf="@+id/button" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/txt_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_layout" />

            <TextView
                android:id="@+id/textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/related_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_desc" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_related"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview3"
                tools:listitem="@layout/item_related" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>