<resources>
    <string name="app_name">MovieJetpack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_text_1">Film</string>
    <string name="tab_text_2">Series</string>
    <string name="tab_text_3">My List</string>
    <string name="text">Text</string>
    <string name="top_film">Top Film</string>
    <string name="discover">Discover</string>
    <string name="trending">Trending</string>
    <string name="todo">TODO</string>
    <string name="_18">18+</string>
    <string name="action">Action</string>
    <string name="_4_5">4.5</string>
    <string name="companies">Companies</string>
    <string name="en">en</string>
    <string name="visit">Visit</string>
    <string name="related_movie">Related Movie</string>
    <string name="more">More On</string>
    <string name="total_seasons">Total Seasons</string>
    <string name="_0_episode">0 Episode</string>
    <string name="total_episode">Total Episode</string>
    <string name="list_nya_kosong">Listnya Kosong</string>

</resources>