...
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listgenre" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_series"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
...
